[gd_scene load_steps=4 format=3 uid="uid://chikyfdwyfcfj"]

[ext_resource type="Script" uid="uid://da5tqviqr82kl" path="res://scripts/Menu.gd" id="1_fddgt"]
[ext_resource type="Texture2D" uid="uid://cawpxlap3g0ho" path="res://assets/backgrounds/menu.png" id="2_11y2r"]
[ext_resource type="FontFile" uid="uid://cb3h2rss2rg7b" path="res://assets/font/madness_hyperactive/Madness Hyperactive.otf" id="3_o0tnf"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fddgt")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_11y2r")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
z_index = 2
layout_mode = 1
anchors_preset = -1
anchor_left = 0.514
anchor_top = 0.5
anchor_right = 0.514
anchor_bottom = 0.5
offset_left = -147.504
offset_top = -20.0
offset_right = 175.496
offset_bottom = 203.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="PlayButton" type="Button" parent="VBoxContainer"]
z_index = 2
layout_mode = 2
text = "Play"

[node name="ChooseCharButton" type="Button" parent="VBoxContainer"]
z_index = 2
layout_mode = 2
text = "Choose your Character"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
z_index = 2
layout_mode = 2
text = "Exit"

[node name="Label" type="Label" parent="."]
z_index = 2
layout_mode = 0
offset_left = 388.0
offset_top = 281.0
offset_right = 1225.0
offset_bottom = 490.0
theme_override_colors/font_color = Color(0.996078, 0.811765, 0.121569, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 10
theme_override_constants/shadow_offset_y = 10
theme_override_fonts/font = ExtResource("3_o0tnf")
theme_override_font_sizes/font_size = 200
text = "Spark Tour Guide"
